feat/inventory: adds integration to inventory discount